# misc_prototype

./: .gitignore
WebDirectoryAccess/: Vagrantfile
WebDirectoryAccess/http/: getFiles.php  index.html  login.php
WebDirectoryAccess/http/WebDirectoryAccess/js/: commonFunction.js
WebDirectoryAccess/http/css/: miscStyle.css
WebDirectoryAccess/http/js/: commonFunction.js
WebDirectoryAccess/http1/: index.html  store_bak.html
WebDirectoryAccess/http2/: index.php  test.txt
bare_vagrant_template/: Vagrantfile
card_game/: Vagrantfile
card_game/http/: 0.html  bot.js  hands.js  help.html  holdem.js  index.html  ini.html
drag_n_drop/: Vagrantfile  notes.txt
drag_n_drop/http/: index.html
packer/: centos7.json  metadata.json
packer/http/: ks.cfg
packer/script/: vagrant.sh  virtualbox.sh  yum_update.sh  zerofs.sh
steganography/: Vagrantfile  notes
steganography/ImageSteganography/: encode.cpp
steganography/ImageSteganography/TextFiles/: text.txt
steganography/data/: msg.txt
steganography/img_steg/: CMakeLists.txt
steganography/img_steg/app/: main.cpp
steganography/img_steg/include/steganography/: LSB_Manip.h
steganography/img_steg/src/: LSB_Manip.cpp  decode.cpp  encode.cpp  test.cpp
steganography/lsb/: CMakeLists.txt
steganography/lsb/app/: main.cpp
steganography/lsb/include/common/: ColorText.h
steganography/lsb/include/lsb/: Exception.h  Lsb.h
steganography/lsb/include/steganography/: Exception.h  LSB_Manip.h
steganography/lsb/src/: LSB_Manip.cpp  Lsb.cpp
